# spotify-linker

./: .env.template  .gitignore  .pylintrc  CONTRIBUTING.md  README.fa.md  README.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/spotify_linker/: __init__.py  logger.py  main.py
src/spotify_linker/api/: __init__.py  webhook.py
src/spotify_linker/clients/: __init__.py  spotify.py  telegram.py
src/spotify_linker/config/: __init__.py  settings.py
src/spotify_linker/schemas/: __init__.py  telegram.py
src/spotify_linker/services/: __init__.py  text_parser.py
tests/: test_health.py  test_logger.py  test_main.py  test_settings.py  test_spotify_client.py  test_telegram_client.py  test_text_parser.py  test_webhook.py
