[tool.poetry]
name = "spotify-linker"
version = "0.1.0"
description = "Telegram bot for automatically adding Spotify links to channel posts"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "spotify_linker", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
spotipy = "^2.24.0"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.8"
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
