[project]
name = "spotify-linker"
version = "0.1.0"
description = "Telegram bot for automatically adding Spotify links to channel posts"
readme = "README.md"
license = "MIT"
authors = [
	{ name = "Farhad Khakzad", email = "farhadkhakzad78@gmail.com" },
]
requires-python = ">=3.11"
keywords = ["telegram", "spotify", "bot", "fastapi"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Framework :: FastAPI",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/FarhadKhakzad/spotify-linker"
Repository = "https://github.com/FarhadKhakzad/spotify-linker"
Issues = "https://github.com/FarhadKhakzad/spotify-linker/issues"

[tool.poetry]
packages = [{ include = "spotify_linker", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
spotipy = "^2.24.0"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.8"
ruff = "^0.6.5"
pytest-cov = "^7.0.0"
pylint = "^3.3.8"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["spotify_linker"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--cov=spotify_linker", "--cov-report=term-missing"]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
